more of refactoring
